--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -1,10 +1,9 @@
 ---
-title: "My title"
+title: "Alberta Mortality 2000 to 2022"
 subtitle: "My subtitle if needed"
 author: 
-  - First author
-  - Another author
-thanks: "Code and data are available at: LINK."
+  - Yihang Cai
+thanks: "Code and data are available at: https://github.com/peachvegetable/Alberta-mortality"
 date: today
 date-format: long
 abstract: "First sentence. Second sentence. Third sentence. Fourth sentence."
@@ -14,126 +13,181 @@ bibliography: references.bib
 ---
 
 ```{r}
-#| include: false
-#| warning: false
 #| message: false
+#| echo: false
+#| warning: false
 
+# load packages
 library(tidyverse)
-library(palmerpenguins)
+library(ggplot2)
+library(janitor)
+library(dplyr)
+library(readr)
+library(knitr)
+library(modelsummary)
+library(boot)
+library(broom.mixed)
+library(bayesplot)
+library(loo)
 ```
 
 
 # Introduction
 
-You can and should cross-reference sections and sub-sections. We use @citeR and @rohan.
-
-The remainder of this paper is structured as follows. @sec-data....
-
 
 
 # Data {#sec-data}
 
-Some of our data is of penguins (@fig-bills), from @palmerpenguins.
+Our data is from Alberta Government opendata, the dataset includes a ranking of the 30 most common causes of death each year in Alberta starts from 2000 to 2022, by ranking and total number of deaths [@citeAlberta]. 
 
 ```{r}
-#| label: fig-bills
-#| fig-cap: Bills of penguins
-#| echo: false
-
-ggplot(penguins, aes(x = island, fill = species)) +
-  geom_bar(alpha = 0.8) +
-  scale_fill_manual(values = c("darkorange","purple","cyan4"),
-                    guide = "none") +
-  theme_minimal() +
-  facet_wrap(~species, ncol = 1) +
-  coord_flip()
-```
-
-Talk more about it.
-
-And also planes (@fig-planes). (You can change the height and width, but don't worry about doing that until you have finished every other aspect of the paper - Quarto will try to make it look nice and the defaults usually work well once you have enough text.)
-
-```{r}
-#| label: fig-planes
-#| fig-cap: Relationship between wing length and width
+#| message: false
 #| echo: false
 #| warning: false
-#| message: false
+#| label: fig-top5causes
+#| fig-cap: Top 5 causes of deaths from 2000 to 2022, for Alberta, Canada
 
-analysis_data <- read_csv(here::here("data/analysis_data/analysis_data.csv"))
+alberta_cod <- read_csv("../data/analysis_data/analysis_data.csv")
 
-analysis_data |> 
-  ggplot(aes(x = width, y = length)) +
-  geom_point(alpha = 0.8) +
+# Identify causes of death that have been recorded in each of the 22 years before 2022
+causes_in_all_years <- alberta_cod |>
+  group_by(cause) |>
+  summarize(count_years = n_distinct(calendar_year)) |>
+  filter(count_years == 22) |>
+  ungroup() |>
+  select(cause)
+
+# Find the top five causes of death in 2022 from those that have been present in all previous years
+alberta_cod_top_five <- alberta_cod |>
+  filter(calendar_year == 2022, cause %in% causes_in_all_years$cause) |>
+  slice_max(order_by = desc(ranking), n = 5) |>
+  pull(cause)
+
+# Filter the original 'alberta_cod' dataset to include only the top five causes
+alberta_cod <- alberta_cod |>
+  filter(cause %in% alberta_cod_top_five)
+
+alberta_cod |>
+  ggplot(aes(x = calendar_year, y = total_deaths, color = cause)) +
+  geom_line() +
   theme_minimal() +
-  labs(x = "Wing width (mm)",
-       y = "Wing length (mm)")
+  scale_color_brewer(palette = "Set1") +
+  labs(x = "Year", y = "Annual number of deaths in Alberta") +
+  facet_wrap(vars(cause), dir = "v", ncol = 1) +
+  theme(legend.position = "none")
 ```
-
-Talk way more about it. 
-
 
 
 # Model
 
-The goal of our modelling strategy is twofold. Firstly,...
-
-Here we briefly describe the Bayesian analysis model used to investigate... Background details and diagnostics are included in [Appendix -@sec-model-details].
 
 ## Model set-up
 
-Define $y_i$ as the number of seconds that the plane remained aloft. Then $\beta_i$ is the wing width and $\gamma_i$ is the wing length, both measured in millimeters.  
+Two models generated, one follows poisson distribution and another follows negative binomial distribution. We are interested in how total number of deaths differs by different causes of deaths.
 
-\begin{align} 
-y_i|\mu_i, \sigma &\sim \mbox{Normal}(\mu_i, \sigma) \\
-\mu_i &= \alpha + \beta_i + \gamma_i\\
-\alpha &\sim \mbox{Normal}(0, 2.5) \\
-\beta &\sim \mbox{Normal}(0, 2.5) \\
-\gamma &\sim \mbox{Normal}(0, 2.5) \\
-\sigma &\sim \mbox{Exponential}(1)
-\end{align}
+Define $y_i$ as the total number of deaths for the i-th observation. Then $\beta_0$ is the expected log count of total deaths when none of the causes in the model are present. It's the starting point of the model's prediction. 
 
-We run the model in R [@citeR] using the `rstanarm` package of @rstanarm. We use the default priors from `rstanarm`.
+\begin{align*} 
+y_i|\lambda_i &\sim \mbox{Poisson}(\lambda_i) \\
+\log(\lambda_i) & = \beta_0 + \beta_1 \times \mbox{cause}_i\\
+\beta_0 & \sim \mbox{Normal}(0, 2.5)\\
+\beta_1 & \sim \mbox{Normal}(0, 2.5)
+\end{align*}
+
+Define $y_i$ as the total deaths for the i-th observation. $\theta$ is the additional parameter to model overdispersion. $\mu_i$ is the mean of the Negative Binomial distribution for the i-th observation, $\beta_0$ is the intercept, and $\beta_1$ represents the effect of each cause of death.
+
+\begin{align*} 
+y_i|\lambda_i, \theta &\sim \mbox{NegativeBinomial}(\mu_i, \theta) \\
+\log(\mu_i) & = \beta_0 + \beta_1 \times \mbox{cause}_i\\
+\beta_0 & \sim \mbox{Normal}(0, 2.5)\\
+\beta_1 & \sim \mbox{Normal}(0, 2.5) \\
+\theta & \sim \mbox{SomePrior}(.)
+\end{align*}
+
+We run the model in R [@citeR] using the `rstanarm` package of [@citeRstanarm]. We use the default priors from `rstanarm`.
+
+We calculate the total number of deaths by the formula
+
+\begin{equation}
+\text{total deaths} = e^{\beta_0 + \sum_{i = 0}^{5} \beta_i X_i}
+\label{eq:total_deaths_formula}
+\end{equation}
+
+Where $X_1$, $X_2$, $X_3$, $X_4$, and $X_5$ represent $X_{\text{Acute myocardial infarction}}$, $X_{\text{All other forms of chronic}}$, $X_{\text{Malignant neoplasms}}$, $X_{\text{Organic dementia}}$, and $X_{\text{Other chronic}}$ respectively.
 
 
-### Model justification
 
-We expect a positive relationship between the size of the wings and time spent aloft. In particular...
+## Model summary
 
-We can use maths by including latex between dollar signs, for instance $\theta$.
+```{r}
+#| message: false
+#| echo: false
+#| warning: false
+#| label: tbl-modelsummary
+#| tbl-cap: Modeling the cause deaths in Alberta, 2000 - 2022
+
+poisson_model = readRDS("../models/poisson_model.rds")
+neg_binomial_model = readRDS("../models/neg_binomial_model.rds")
+
+modelsummary(
+  list(
+    "Poisson" = poisson_model,
+    "Negative binomial" = neg_binomial_model
+  )
+)
+```
+
+
+```{r}
+#| message: false
+#| echo: false
+#| warning: false
+#| label: fig-ppcheckpoissonvsbinomial
+#| layout-ncol: 2
+#| fig-cap: "Comparing Poisson and negative binomial models"
+#| fig-subcap: ["Poisson model", "Negative binomial model"]
+
+pp_check(poisson_model) +
+  theme(legend.position = "bottom")
+
+pp_check(neg_binomial_model) +
+  theme(legend.position = "bottom")
+```
+
+```{r}
+#| message: false
+#| echo: false
+#| warning: false
+#| label: tbl-elpdtable
+#| tbl-cap: "ELPD table"
+
+
+poisson <- loo(poisson_model, cores = 2)
+neg_binomial <- loo(neg_binomial_model, cores = 2)
+
+loo_compare(poisson, neg_binomial)
+```
+
+```{r}
+#| message: false
+#| echo: false
+#| warning: false
+#| label: fig-confidenceinterval
+#| layout-ncol: 2
+#| fig-cap: "90% Confidence Interval"
+#| fig-subcap: ["Poisson model", "Negative binomial model"]
+
+modelplot(poisson_model, conf_level = 0.9) +
+  labs(x = "90 per cent credibility interval")
+
+modelplot(neg_binomial_model, conf_level = 0.9) +
+  labs(x = "90 per cent credibility interval")
+```
+
 
 
 # Results
 
-Our results are summarized in @tbl-modelresults.
-
-```{r}
-#| echo: false
-#| eval: true
-#| warning: false
-#| message: false
-
-library(rstanarm)
-
-first_model <-
-  readRDS(file = here::here("models/first_model.rds"))
-```
-
-```{r}
-#| echo: false
-#| eval: true
-#| label: tbl-modelresults
-#| tbl-cap: "Explanatory models of flight time based on wing width and wing length"
-#| warning: false
-
-modelsummary::modelsummary(
-  list(
-    "First model" = first_model
-  ),
-  statistic = "mad",
-  fmt = 2
-)
-```
 
 
 
@@ -165,51 +219,9 @@ Weaknesses and next steps should also be included.
 
 ## Posterior predictive check
 
-In @fig-ppcheckandposteriorvsprior-1 we implement a posterior predictive check. This shows...
-
-In @fig-ppcheckandposteriorvsprior-2 we compare the posterior with the prior. This shows... 
-
-```{r}
-#| eval: true
-#| echo: false
-#| message: false
-#| warning: false
-#| label: fig-ppcheckandposteriorvsprior
-#| layout-ncol: 2
-#| fig-cap: "Examining how the model fits, and is affected by, the data"
-#| fig-subcap: ["Posterior prediction check", "Comparing the posterior with the prior"]
-
-pp_check(first_model) +
-  theme_classic() +
-  theme(legend.position = "bottom")
-
-posterior_vs_prior(first_model) +
-  theme_minimal() +
-  scale_color_brewer(palette = "Set1") +
-  theme(legend.position = "bottom") +
-  coord_flip()
-```
 
 ## Diagnostics
 
-@fig-stanareyouokay-1 is a trace plot. It shows... This suggests...
-
-@fig-stanareyouokay-2 is a Rhat plot. It shows... This suggests...
-
-```{r}
-#| echo: false
-#| eval: true
-#| message: false
-#| warning: false
-#| label: fig-stanareyouokay
-#| fig-cap: "Checking the convergence of the MCMC algorithm"
-#| fig-subcap: ["Trace plot", "Rhat plot"]
-#| layout-ncol: 2
-
-plot(first_model, "trace")
-
-plot(first_model, "rhat")
-```
 
 
 
