--- a/paper/references.bib
+++ b/paper/references.bib
@@ -43,7 +43,7 @@
   }  
   
   
-@Book{citeGgplot,
+@Book{citeGgplot2,
   author = {Hadley Wickham},
   title = {ggplot2: Elegant Graphics for Data Analysis},
   publisher = {Springer-Verlag New York},
@@ -80,7 +80,7 @@
 }
 
 
-@book{citeknitr,
+@book{citeKnitr,
   booktitle = {Implementing Reproducible Computational Research},
   editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
   title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
@@ -111,6 +111,15 @@
     pages = {1--23},
     doi = {10.18637/jss.v103.i01},
   }
+  
+  
+@misc{@citeICI, 
+  title={Life expectancy fell in 2022 for 3rd year in a row: StatsCan: RCI}, 
+  url={https://ici.radio-canada.ca/rci/en/news/2030697/life-expectancy-fell-in-2022-for-3rd-year-in-a-row-statscan}, 
+  journal={Radio}, 
+  publisher={Radio-Canada.ca}, 
+  author={ICI.Radio-Canada.ca, Zone Santé -}
+  } 
 
   
   
