--- a/paper/references.bib
+++ b/paper/references.bib
@@ -113,13 +113,25 @@
   }
   
   
-@misc{@citeICI, 
+@misc{citeICI, 
   title={Life expectancy fell in 2022 for 3rd year in a row: StatsCan: RCI}, 
   url={https://ici.radio-canada.ca/rci/en/news/2030697/life-expectancy-fell-in-2022-for-3rd-year-in-a-row-statscan}, 
   journal={Radio}, 
   publisher={Radio-Canada.ca}, 
   author={ICI.Radio-Canada.ca, Zone Santé -}
   } 
+  
+
+@Article{citeBayesplot,
+    title = {Visualization in Bayesian workflow},
+    author = {Jonah Gabry and Daniel Simpson and Aki Vehtari and Michael Betancourt and Andrew Gelman},
+    year = {2019},
+    journal = {J. R. Stat. Soc. A},
+    volume = {182},
+    issue = {2},
+    pages = {389-402},
+    doi = {10.1111/rssa.12378},
+  }
 
   
   
